--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Web site created using create-react-app"    />
+      <link rel="shortcut icon" href="favicon/favicon.png" type="image/x-icon">
 <!--     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Acme&family=Poppins:wght@400;700&family=Quicksand:wght@300&family=Roboto+Slab&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Hungernomia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
